...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="20dp"/>

        <TextView
...
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/imgFavoritoChiquitin"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:drawableLeft="@drawable/estrella_gris"
...
