<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/estrella_blanca"
        android:title="@string/favoritos"
        app:showAsAction="always" />

</menu>
