...
                    android:textAlignment="center"
                    android:textColor="#000000"
                    tools:text="Info" />
            </LinearLayout>

            <Button
                android:id="@+id/btnFavs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
...
