<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/icono_filtro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Marque las casillas que más se adapten a su búsqueda:"
                android:textColor="#201515"
                android:textSize="16sp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/checkbox_precio"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/dialogColor"
                    android:text="Precio"
                    android:textSize="16sp" />
            </RadioGroup>

            <View
                android:id="@+id/rectangulo"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.539" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonAsc"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="Ascendente"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButtonDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:text="Descendente"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/btnCancelarOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="CANCELAR" />

            <TextView
                android:id="@+id/btnAceptarOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"
                android:text="ACEPTAR" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>