<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/orden"
        android:icon="@drawable/orden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/filtro"
        app:showAsAction="always" />
    <item
        android:id="@+id/filtro"
        android:icon="@drawable/filtro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/filtro"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/info" />

</menu>
