<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="16dp"
    android:background="#C5E1A5"

    tools:context=".activities.main.popUpPotencias">

    <TextView
        android:id="@+id/textoPotencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Marque las casillas que más se adapten a su búsqueda:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox android:id="@+id/checkbox2kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="2kW"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox7.4kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="7.4kW"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox22kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="22kW"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox40kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="40kW"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox50kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="50kW"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:text="Aceptar" />

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-50dp"
        android:text="Cancelar" />





</LinearLayout>