<resources>
    <string name="app_name">Car Chargers</string>
    <string name="info">Info</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="info_text">Aplicación creada para el Proyecto Integrado Curso 2023-2024</string>
    <string name="no_favoritos">No se han añadido puntos de carga a favoritos por el momento</string>
    <string name="Cabecera_favoritos">Favoritos</string>
    <string name="filtros">Filtros</string>
    <string name="filtro" />
    <string name="favoritos" />
</resources>